changed homepage add

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/faeghe-hajiabadi/covid19",
+  "homepage": ".",
   "name": "covid19",
   "version": "0.1.0",
   "private": true,
