--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-jvectormap": "^0.0.16",
     "react-scripts": "3.4.1",
+    "react-virtualized": "^9.21.2",
     "react-vis": "^1.11.7",
     "victory": "^34.1.3"
   },
