--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jvectormap": "^0.0.16",
+    "react-pure-loaders": "^3.0.1",
     "react-scripts": "3.4.1",
     "react-virtualized": "^9.21.2",
     "react-vis": "^1.11.7",
