--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-animate-height": "^2.0.21",
     "react-dom": "^16.13.1",
     "react-jvectormap": "^0.0.16",
     "react-pure-loaders": "^3.0.1",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "4.3.0",
     "react-virtualized": "^9.21.2",
     "react-vis": "^1.11.7",
     "victory": "^34.1.3"
