--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-anim-kit": "^1.0.19",
     "react-animate-height": "^2.0.21",
     "react-dom": "^16.13.1",
     "react-jvectormap": "^0.0.16",
