--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-jvectormap": "^0.0.16",
     "react-pure-loaders": "^3.0.1",
     "react-scripts": "3.4.1",
+    "react-sticky-table": "^5.0.0",
     "react-transition-group": "4.3.0",
     "react-virtualized": "^9.21.2",
     "react-vis": "^1.11.7",
