--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-animate-height": "^2.0.21",
     "react-dom": "^16.13.1",
     "react-jvectormap": "^0.0.16",
+    "react-lottie": "^1.2.3",
     "react-pure-loaders": "^3.0.1",
     "react-scripts": "3.4.1",
     "react-sticky-table": "^5.0.0",
