--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "react": "^16.13.1",
     "react-anim-kit": "^1.0.19",
     "react-animate-height": "^2.0.21",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
+    "react-id-swiper": "^3.0.0",
     "react-jvectormap": "^0.0.16",
     "react-lottie": "^1.2.3",
+    "react-page-scroller": "^2.0.7-beta",
     "react-pure-loaders": "^3.0.1",
     "react-scripts": "3.4.1",
     "react-sticky-table": "^5.0.0",
     "react-transition-group": "4.3.0",
     "react-virtualized": "^9.21.2",
     "react-vis": "^1.11.7",
+    "swiper": "^5.4.0",
     "victory": "^34.1.3"
   },
   "scripts": {
